--- a/src/app/projekt/projekt-datumok/projekt-datumok.component.html
+++ b/src/app/projekt/projekt-datumok/projekt-datumok.component.html
@@ -5,35 +5,30 @@
 
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Keletkezett</div>
-      </div>
-      <div class="col-md-2">
-        <input type="date" class="form-control form-control-sm" id="keletkezett"
+      <div>
+        <div class="egylabel">Keletkezett</div>
+        <input type="date" class="form-control form-control-sm oszlop3" id="keletkezett"
                [(ngModel)]="Keletkezett" name="keletkezett">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Megrendelve</div>
-      </div>
-      <div class="col-md-2">
-        <input type="date" class="form-control form-control-sm" id="megrendelve"
+      <div>
+        <div class="egylabel">Megrendelve</div>
+        <input type="date" class="form-control form-control-sm oszlop3" id="megrendelve"
                [(ngModel)]="Megrendelve" name="megrendelve">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Kivitelezési határidő</div>
-      </div>
-      <div class="col-md-2">
-        <input type="date" class="form-control form-control-sm" id="kivhat"
+      <div>
+        <div class="egylabel">Kivitelezési határidő</div>
+        <input type="date" class="form-control form-control-sm oszlop3" id="kivhat"
                [(ngModel)]="KivHat" name="kivhat">
       </div>
     </div>
 
-    <div class="row no-gutters" style="margin-bottom: 10px">
-      <div class="col-md-2"></div>
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
