--- a/src/app/projektteendo/projekt-teendo-elvegezve/projekt-teendo-elvegezve.component.html
+++ b/src/app/projektteendo/projekt-teendo-elvegezve/projekt-teendo-elvegezve.component.html
@@ -2,22 +2,21 @@
   <h5>{{projektteendoservice.cim}} elvégezve</h5>
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Elvégezve</div>
-      </div>
-      <div class="col-md-2">
-        <input type="date" class="form-control form-control-sm" id="elvegezve"
+      <div>
+        <div class="egylabel">Elvégezve</div>
+        <input type="date" class="form-control form-control-sm oszlop3" id="elvegezve"
                autocomplete="off"
                [(ngModel)]="Elvegezve" name="elvegezve">
       </div>
     </div>
 
-    <div class="row no-gutters" style="margin-bottom: 10px">
-      <div class="col-md-2"></div>
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
+
   </form>
 </div>
 
