--- a/src/app/csoport/csoport-egy/csoport-egy.component.html
+++ b/src/app/csoport/csoport-egy/csoport-egy.component.html
@@ -1,24 +1,24 @@
 <div class="alapkeret">
   <div>
     <nav>
-      <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit" (click)="doReszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
       </button>
 
       <button [disabled]="eppFrissit"
-              (click)="torles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+              (click)="doTorles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-minus" aria-hidden="true"></i>
       </button>
       <button [disabled]="eppFrissit"
-              (click)="modositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+              (click)="doModositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
       <button [disabled]="eppFrissit"
-              (click)="felhasznalo()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+              (click)="doFelhasznalo()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Felhasználó
       </button>
       <button [disabled]="eppFrissit"
-              (click)="jog()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+              (click)="doJog()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Jog
       </button>
     </nav>
@@ -29,8 +29,7 @@
     <div [@rowanimation]>
       <app-reszletek [cim]="csoportservice.cim"
                      [item]="csoportservice.Dto[csoportservice.DtoSelectedIndex]"
-                     [colsets]="csoportservice.ReszletekSettings"
-                     [(selectedindex)]="ri">
+                     [colsets]="csoportservice.ReszletekSettings">
       </app-reszletek>
     </div>
   </ng-container>
@@ -38,14 +37,15 @@
     <div [@rowanimation]>
       <app-tetel-torles [cim]="csoportservice.cim"
                         [eppFrissit]="eppFrissit"
-                        (OkClick)="TorlesOk()"
-                        (CancelClick)="TorlesCancel()">
+                        (eventTorles)="onTorles($event)">
       </app-tetel-torles>
     </div>
   </ng-container>
   <ng-container *ngIf="egymode === 3">
     <div [@rowanimation]>
-      <app-csoport-szerkesztes (KontenerKeres)="EgyReszletek()"></app-csoport-szerkesztes>
+      <app-csoport-szerkesztes [uj]="false"
+                               (eventSzerkeszteskesz)="onModositaskesz()">
+      </app-csoport-szerkesztes>
     </div>
   </ng-container>
 
