--- a/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
+++ b/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
@@ -31,6 +31,19 @@
       </div>
     </div>
 
+
+    <ng-container *ngIf="cikkservice.SzerkesztesMode === 1">
+      <div class="row no-gutters editform-row">
+        <app-me-list></app-me-list>
+      </div>
+    </ng-container>
+    <ng-container *ngIf="cikkservice.SzerkesztesMode === 2">
+      <div class="row no-gutters editform-row">
+        <app-afakulcs-list></app-afakulcs-list>
+      </div>
+    </ng-container>
+
+
     <div class="row no-gutters editform-row">
       <div style="margin-right: 5px">
         <div class="egylabel">Egységár</div>
@@ -80,30 +93,16 @@
       </div>
     </div>
 
+    <ng-container *ngIf="cikkservice.SzerkesztesMode === 3">
+      <div class="row no-gutters editform-row">
+        <app-termekdij-list></app-termekdij-list>
+      </div>
+    </ng-container>
+
     <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
   </form>
-
-<!--  export enum CikkSzerkesztesMode {
-  Blank = 0,
-  MeZoom = 1,
-  AfakulcsZoom = 2,
-  TermekdijZoom = 3
-  }-->
-
-  <ng-container *ngIf="cikkservice.SzerkesztesMode === 0">
-    <app-blank></app-blank>
-  </ng-container>
-  <ng-container *ngIf="cikkservice.SzerkesztesMode === 1">
-    <app-me-list></app-me-list>
-  </ng-container>
-  <ng-container *ngIf="cikkservice.SzerkesztesMode === 2">
-    <app-afakulcs-list></app-afakulcs-list>
-  </ng-container>
-  <ng-container *ngIf="cikkservice.SzerkesztesMode === 3">
-    <app-termekdij-list></app-termekdij-list>
-  </ng-container>
 </div>
 
