--- a/src/app/volume/volume-egy/volume-egy.component.html
+++ b/src/app/volume/volume-egy/volume-egy.component.html
@@ -11,12 +11,7 @@
     </nav>
   </div>
 
-<!--  export enum VolumeEgyMode {
-  Reszletek = 0,
-  Teszt = 1
-  }-->
-
-  <ng-container *ngIf="volumeservice.EgyMode === 0">
+  <ng-container *ngIf="egymode === 1">
     <div [@rowanimation]>
       <app-reszletek [cim]="volumeservice.cim"
                      [item]="volumeservice.Dto[volumeservice.DtoSelectedIndex]"
@@ -25,7 +20,7 @@
       </app-reszletek>
     </div>
   </ng-container>
-  <ng-container *ngIf="volumeservice.EgyMode === 1">
+  <ng-container *ngIf="egymode === 17">
     <div [@rowanimation]>
       <app-volume-teszt></app-volume-teszt>
     </div>
