nah b+ cikk+ügyfél

--- a/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
+++ b/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
@@ -67,7 +67,7 @@
   }-->
 
   <ng-container *ngIf="ajanlatservice.AjanlatSzerkesztesMode === 1">
-    <app-cikk-container></app-cikk-container>
+    <app-cikk-list></app-cikk-list>
   </ng-container>
 </div>
 
