--- a/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
@@ -137,7 +137,7 @@
                              [Dto]="bizonylatservice.ComplexDtoEdited.LstTetelDto"></app-bizonylatteteltabla>
   </ng-container>
   <ng-container *ngIf="bizonylatservice.SzerkesztesMode === 2">
-    <app-ugyfel-container></app-ugyfel-container>
+    <app-ugyfel-list></app-ugyfel-list>
   </ng-container>
   <ng-container *ngIf="bizonylatservice.SzerkesztesMode === 3">
     <app-penznem-list></app-penznem-list>
