--- a/src/app/irat/irat-szerkesztes/irat-szerkesztes.component.html
+++ b/src/app/irat/irat-szerkesztes/irat-szerkesztes.component.html
@@ -90,6 +90,6 @@
     <app-irattipus-list></app-irattipus-list>
   </ng-container>
   <ng-container *ngIf="iratservice.SzerkesztesMode === 2">
-    <app-ugyfel-container></app-ugyfel-container>
+    <app-ugyfel-list></app-ugyfel-list>
   </ng-container>
 </div>
