--- a/src/app/projekt/projekt-szerkesztes/projekt-szerkesztes.component.html
+++ b/src/app/projekt/projekt-szerkesztes/projekt-szerkesztes.component.html
@@ -79,7 +79,7 @@
     }-->
 
   <ng-container *ngIf="projektservice.SzerkesztesMode === 1">
-    <app-ugyfel-container></app-ugyfel-container>
+    <app-ugyfel-list></app-ugyfel-list>
   </ng-container>
   <ng-container *ngIf="projektservice.SzerkesztesMode === 2">
     <app-penznem-list></app-penznem-list>
