--- a/src/app/ugyfel/ugyfel-vcard/ugyfel-vcard.component.html
+++ b/src/app/ugyfel/ugyfel-vcard/ugyfel-vcard.component.html
@@ -4,27 +4,27 @@
     <tbody>
     <tr>
       <td class="egylabel">Név:</td>
-      <td>{{item.Nev}}</td>
+      <td>{{ugyfelservice.DtoEdited.Nev}}</td>
     </tr>
     <tr>
       <td class="egylabel">Cég:</td>
-      <td>{{item.Ceg}}</td>
+      <td>{{ugyfelservice.DtoEdited.Ceg}}</td>
     </tr>
     <tr>
       <td class="egylabel">Beosztás:</td>
-      <td>{{item.Beosztas}}</td>
+      <td>{{ugyfelservice.DtoEdited.Beosztas}}</td>
     </tr>
     <tr>
       <td class="egylabel">Cím:</td>
-      <td>{{item.Iranyitoszam}} {{item.Helysegnev}}, {{item.Kozterulet}} {{item.Kozterulettipus}} {{item.Hazszam}}</td>
+      <td>{{ugyfelservice.DtoEdited.Iranyitoszam}} {{ugyfelservice.DtoEdited.Helysegnev}}, {{ugyfelservice.DtoEdited.Kozterulet}} {{ugyfelservice.DtoEdited.Kozterulettipus}} {{ugyfelservice.DtoEdited.Hazszam}}</td>
     </tr>
     <tr>
       <td class="egylabel">Telefon:</td>
-      <td>{{item.Telefon}}</td>
+      <td>{{ugyfelservice.DtoEdited.Telefon}}</td>
     </tr>
     <tr>
       <td class="egylabel">Email:</td>
-      <td>{{item.Email}}</td>
+      <td>{{ugyfelservice.DtoEdited.Email}}</td>
     </tr>
     </tbody>
   </table>
