--- a/src/app/bizonylat/bizonylat-tetel-szerkesztes/bizonylat-tetel-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylat-tetel-szerkesztes/bizonylat-tetel-szerkesztes.component.html
@@ -226,7 +226,7 @@
   }-->
 
   <ng-container *ngIf="bizonylatservice.TetelSzerkesztesMode === 1">
-    <app-cikk-container></app-cikk-container>
+    <app-cikk-list></app-cikk-list>
   </ng-container>
   <ng-container *ngIf="bizonylatservice.TetelSzerkesztesMode === 2">
     <app-me-list></app-me-list>
