--- a/src/app/cikk/cikk-egy/cikk-egy.component.html
+++ b/src/app/cikk/cikk-egy/cikk-egy.component.html
@@ -1,24 +1,24 @@
 <div class="alapkeret">
   <div>
     <nav>
-      <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit" (click)="doReszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
       </button>
 
-      <button [disabled]="eppFrissit || !mod"
-              (click)="torles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit || !jog"
+              (click)="doTorles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-minus" aria-hidden="true"></i>
       </button>
-      <button [disabled]="eppFrissit || !mod"
-              (click)="modositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit || !jog"
+              (click)="doModositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
       <button [disabled]="eppFrissit"
-              (click)="beszerzes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+              (click)="doBeszerzes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Beszerzés
       </button>
       <button [disabled]="eppFrissit"
-              (click)="kivet()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+              (click)="doKivet()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Kivét
       </button>
     </nav>
@@ -28,8 +28,7 @@
     <div [@rowanimation]>
       <app-reszletek [cim]="cikkservice.cim"
                      [item]="cikkservice.Dto[cikkservice.DtoSelectedIndex]"
-                     [colsets]="cikkservice.ReszletekSettings"
-                     [(selectedindex)]="ri">
+                     [colsets]="cikkservice.ReszletekSettings">
       </app-reszletek>
     </div>
   </ng-container>
@@ -37,14 +36,14 @@
     <div [@rowanimation]>
       <app-tetel-torles [cim]="cikkservice.cim"
                         [eppFrissit]="eppFrissit"
-                        (OkClick)="TorlesOk()"
-                        (CancelClick)="TorlesCancel()">
+                        (eventTorles)="onTorles($event)">
       </app-tetel-torles>
     </div>
   </ng-container>
   <ng-container *ngIf="egymode === 3">
     <div [@rowanimation]>
-      <app-cikk-szerkesztes (KontenerKeres)="EgyReszletek()">
+      <app-cikk-szerkesztes [uj]="false"
+                            (eventSzerkeszteskesz)="onModositaskesz()">
       </app-cikk-szerkesztes>
     </div>
   </ng-container>
