--- a/src/app/ugyfel/ugyfel-egy/ugyfel-egy.component.html
+++ b/src/app/ugyfel/ugyfel-egy/ugyfel-egy.component.html
@@ -1,28 +1,28 @@
 <div class="alapkeret">
   <div>
     <nav>
-      <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit" (click)="doReszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
       </button>
 
-      <button [disabled]="eppFrissit || !mod"
-              (click)="torles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit || !jog"
+              (click)="doTorles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-minus" aria-hidden="true"></i>
       </button>
-      <button [disabled]="eppFrissit || !mod"
-              (click)="modositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit || !jog"
+              (click)="doModositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
-      <button [disabled]="eppFrissit" (click)="csoport()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit" (click)="doCsoport()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Csoport
       </button>
-      <button [disabled]="eppFrissit" (click)="projekt()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit" (click)="doProjekt()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Projekt
       </button>
-      <button [disabled]="eppFrissit" (click)="ugyfelterlink()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit" (click)="doUgyfelterlink()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Ügyféltér link
       </button>
-      <button [disabled]="eppFrissit" (click)="vcard()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit" (click)="doVcard()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         vCard
       </button>
     </nav>
@@ -33,8 +33,7 @@
     <div [@rowanimation]>
       <app-reszletek [cim]="ugyfelservice.cim"
                      [item]="ugyfelservice.Dto[ugyfelservice.DtoSelectedIndex]"
-                     [colsets]="ugyfelservice.ReszletekSettings"
-                     [(selectedindex)]="ri">
+                     [colsets]="ugyfelservice.ReszletekSettings">
       </app-reszletek>
     </div>
   </ng-container>
@@ -42,24 +41,22 @@
     <div [@rowanimation]>
       <app-tetel-torles [cim]="ugyfelservice.cim"
                         [eppFrissit]="eppFrissit"
-                        (OkClick)="TorlesOk()"
-                        (CancelClick)="TorlesCancel()">
+                        (eventTorles)="onTorles($event)">
       </app-tetel-torles>
     </div>
   </ng-container>
   <ng-container *ngIf="egymode === 3">
     <div [@rowanimation]>
-      <app-ugyfel-szerkesztes (KontenerKeres)="EgyReszletek()"></app-ugyfel-szerkesztes>
+      <app-ugyfel-szerkesztes [uj]="false"
+                              (eventSzerkeszteskesz)="onModositaskesz()">
+      </app-ugyfel-szerkesztes>
     </div>
   </ng-container>
 
 
   <ng-container *ngIf="egymode === 7">
     <div [@rowanimation]>
-      <app-ugyfel-csoport [selected]="ugyfelservice.DtoEdited.Csoport"
-                          [eppFrissit]="eppFrissit"
-                          (OkClick)="CsoportOk($event)"
-                          (CancelClick)="CsoportCancel()">
+      <app-ugyfel-csoport (eventSzerkeszteskesz)="onModositaskesz()">
       </app-ugyfel-csoport>
     </div>
   </ng-container>
@@ -75,8 +72,7 @@
   </ng-container>
   <ng-container *ngIf="egymode === 10">
     <div [@rowanimation]>
-      <app-ugyfel-vcard [item]="ugyfelservice.DtoEdited"
-                        (LetoltesClick)="VcardLetoles()">
+      <app-ugyfel-vcard (LetoltesClick)="VcardLetoles()">
       </app-ugyfel-vcard>
     </div>
   </ng-container>
