--- a/src/app/projektkapcsolat/projektkapcsolat-container/projektkapcsolat-container.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-container/projektkapcsolat-container.component.html
@@ -24,7 +24,7 @@ export enum BizonylatesIratContainerMode {
   <app-bizonylat-egy></app-bizonylat-egy>
 </ng-container>
 <ng-container *ngIf="projektkapcsolatservice.ContainerMode === 3">
-  <app-irat-container [enProjekt]="false"></app-irat-container>
+  <app-irat-list [enProjekt]="false"></app-irat-list>
 </ng-container>
 
 
