--- a/src/app/fotozas/fotozas-link/fotozas-link.component.html
+++ b/src/app/fotozas/fotozas-link/fotozas-link.component.html
@@ -1,13 +1,18 @@
 <div class="alapkeret">
   <h5>Fotózás link</h5>
+
   <ng-container *ngIf="kikuldesikodidopontja !== ''">
     <p>Korábban már készült fotózás link ehhez az irathoz ({{kikuldesikodidopontja}})!</p>
     <div class="form-group">
       <textarea class="form-control" rows="3" id="regilink" readonly="true" [(ngModel)]="link"></textarea>
     </div>
   </ng-container>
-  <button [disabled]="eppFrissit" (click)="fotozaslink()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+
+  <button [disabled]="eppFrissit"
+          (click)="fotozaslink()"
+          class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
     Új fotózás link
   </button>
+
   <p *ngIf="kikuldesikodidopontja !== ''">Ha új linket készít, a régi érvényessége megszűnik!</p>
 </div>
