--- a/src/app/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
+++ b/src/app/dokumentum/dokumentum-feltoltes/dokumentum-feltoltes.component.html
@@ -14,10 +14,10 @@
     <div class="row no-gutters editform-row">
       <div>
         <div class="egylabel">Megjegyzés</div>
-        <input type="text" class="form-control form-control-sm oszlop4" style="display: inline-block" id="megjegyzes"
+        <input type="text" class="form-control form-control-sm oszlop4" id="megjegyzes"
                autocomplete="off"
                [(ngModel)]="megjegyzes" name="megjegyzes">
-        <div style="color: red;margin-left: 4px; display: inline-block">Ha ez a mező üresen marad, automatikusan az eredeti fájlnév kerül a megjegyzésbe.</div>
+        <div style="color: red">Ha ez a mező üresen marad, automatikusan<br> az eredeti fájlnév kerül a megjegyzésbe.</div>
       </div>
     </div>
 
