--- a/src/app/irat/irat-egy/irat-egy.component.html
+++ b/src/app/irat/irat-egy/irat-egy.component.html
@@ -58,7 +58,7 @@
 
   <ng-container *ngIf="egymode === 15">
     <div [@rowanimation]>
-      <app-dokumentum-container></app-dokumentum-container>
+      <app-dokumentum-list></app-dokumentum-list>
     </div>
   </ng-container>
 
