--- a/src/app/dokumentum/dokumentum-egy/dokumentum-egy.component.html
+++ b/src/app/dokumentum/dokumentum-egy/dokumentum-egy.component.html
@@ -1,10 +1,10 @@
 <div class="alapkeret">
   <div>
     <nav>
-      <button (click)="reszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="doReszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
       </button>
-      <button [disabled]="eppFrissit" (click)="torles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit" (click)="doTorles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-minus" aria-hidden="true"></i>
       </button>
       <button [disabled]="eppFrissit" (click)="letoltes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
@@ -24,8 +24,7 @@
     <div [@rowanimation]>
       <app-reszletek [cim]="dokumentumservice.cim"
                      [item]="dokumentumservice.Dto[dokumentumservice.DtoSelectedIndex]"
-                     [colsets]="dokumentumservice.ReszletekSettings"
-                     [(selectedindex)]="ri">
+                     [colsets]="dokumentumservice.ReszletekSettings">
       </app-reszletek>
     </div>
   </ng-container>
@@ -33,8 +32,7 @@
     <div [@rowanimation]>
       <app-tetel-torles [cim]="dokumentumservice.cim"
                         [eppFrissit]="eppFrissit"
-                        (OkClick)="TorlesOk()"
-                        (CancelClick)="TorlesCancel()">
+                        (eventTorles)="onTorles($event)">
       </app-tetel-torles>
     </div>
   </ng-container>
