--- a/src/app/penztar/penztar-egy/penztar-egy.component.html
+++ b/src/app/penztar/penztar-egy/penztar-egy.component.html
@@ -1,25 +1,25 @@
 <div class="alapkeret">
   <div>
     <nav>
-      <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit" (click)="doReszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
       </button>
 
-      <button [disabled]="eppFrissit || !mod || !nyitva"
-              (click)="torles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit || !jog || !nyitva"
+              (click)="doTorles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-minus" aria-hidden="true"></i>
       </button>
-      <button [disabled]="eppFrissit || !mod || !nyitva"
-              (click)="modositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit || !jog || !nyitva"
+              (click)="doModositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
 
       <button [disabled]="eppFrissit"
-              (click)="tetelek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+              (click)="doTetelek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Tételek
       </button>
       <button [disabled]="eppFrissit"
-              (click)="export()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+              (click)="doExport()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Export
       </button>
     </nav>
@@ -30,8 +30,7 @@
     <div [@rowanimation]>
       <app-reszletek [cim]="penztarservice.cim"
                      [item]="penztarservice.Dto[penztarservice.DtoSelectedIndex]"
-                     [colsets]="penztarservice.ReszletekSettings"
-                     [(selectedindex)]="ri">
+                     [colsets]="penztarservice.ReszletekSettings">
       </app-reszletek>
     </div>
   </ng-container>
@@ -39,14 +38,15 @@
     <div [@rowanimation]>
       <app-tetel-torles [cim]="penztarservice.cim"
                         [eppFrissit]="eppFrissit"
-                        (OkClick)="TorlesOk()"
-                        (CancelClick)="TorlesCancel()">
+                        (eventTorles)="onTorles($event)">
       </app-tetel-torles>
     </div>
   </ng-container>
   <ng-container *ngIf="egymode === 3">
     <div [@rowanimation]>
-      <app-penztar-szerkesztes (KontenerKeres)="EgyReszletek()"></app-penztar-szerkesztes>
+      <app-penztar-szerkesztes [uj]="false"
+                               (eventSzerkeszteskesz)="onModositaskesz()">
+      </app-penztar-szerkesztes>
     </div>
   </ng-container>
 
