--- a/src/app/penztar/penztar-szerkesztes/penztar-szerkesztes.component.html
+++ b/src/app/penztar/penztar-szerkesztes/penztar-szerkesztes.component.html
@@ -1,6 +1,6 @@
 <div class="alapkeret">
-  <h5 *ngIf="penztarservice.uj">Új {{penztarservice.cim | lowercase}}</h5>
-  <h5 *ngIf="!penztarservice.uj">{{penztarservice.cim}} módosítása</h5>
+  <h5 *ngIf="uj">Új {{penztarservice.cim | lowercase}}</h5>
+  <h5 *ngIf="!uj">{{penztarservice.cim}} módosítása</h5>
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
@@ -24,19 +24,16 @@
       </div>
     </div>
 
+    <ng-container *ngIf="penztarservice.SzerkesztesMode === 1">
+      <div class="row no-gutters editform-row">
+        <app-penznem-list></app-penznem-list>
+      </div>
+    </ng-container>
+
     <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
   </form>
-
-<!--  export enum PenztarSzerkesztesMode {
-  Blank = 0,
-  PenznemZoom = 1,
-  }-->
-
-  <ng-container *ngIf="penztarservice.SzerkesztesMode === 1">
-    <app-penznem-list></app-penznem-list>
-  </ng-container>
 </div>
 
