--- a/src/app/penztar/penztar-egy/penztar-egy.component.html
+++ b/src/app/penztar/penztar-egy/penztar-egy.component.html
@@ -52,7 +52,7 @@
 
   <ng-container *ngIf="egymode === 13">
     <div [@rowanimation]>
-      <app-penztartetel-container></app-penztartetel-container>
+      <app-penztartetel-list></app-penztartetel-list>
     </div>
   </ng-container>
   <ng-container *ngIf="egymode === 14">
